fix: remove z-index from intro (broke sphere), use profile background to cover overlap

--- a/portfolio-master/portfolio-master/app/routes/home/intro.module.css
+++ b/portfolio-master/portfolio-master/app/routes/home/intro.module.css
@@ -5,7 +5,6 @@
   justify-content: center;
   flex-direction: column;
   position: relative;
-  z-index: 0;
 }
 
 .text {
